MIFOSX-230-2: Extended documents functionality to groups entity and added to documentation

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -8150,7 +8150,7 @@ No Request Body:
 					<h3>Documents</h3>
 					<p>Multiple Documents (a combination of a name, description
 						and a file) may be attached to different Entities 
-						like Clients, Staff, Loans, Savings and Client
+						like Clients, Groups, Staff, Loans, Savings and Client
 						Identifiers in the system
 					</p>
 					<p>Note: The currently allowed Entities are
@@ -8160,6 +8160,7 @@ No Request Body:
 							<li>Loans: URL Pattern as <i>loans</i></li>
 							<li>Savings: URL Pattern as <i>savings</i></li>
 							<li>Client Identifiers: URL Pattern as <i>client_identifiers</i></li>
+                                                        <li>Groups: URL Pattern as <i>groups</i></li>
 						</ul>
 					</p>
 					<br/>
