Full api matrix updated for write off

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -12485,6 +12485,13 @@ GET https://DomainName/api/v1/search?query=000000111
 					<td></td>
 					<td></td>
 					<td></td>
+				</tr><tr>
+					<td></td>
+					<td>loans/{loanId}/transactions?command=writeoff</td>
+					<td><a href="#loans_transaction_write-off_loan">Write-off Loan</a></td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr class="alt">
 					<td></td>
